# quadlet-compose

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  flake.nix  podlet_compose.py  pyproject.toml  quadlet_compose.py  requirements.txt  test.py  testing.ipynb
.forgejo/workflows/: regenerate-models.yml  release.yml  sync-wiki.yml  tests.yml
.github/workflows/: python-app.yml  regenerate-models.yml  release.yml  sync-wiki.yml  tests.yml
.roo/: mcp.json
cmd/: compose_build.py  compose_run.py  compose_version.py  config.py  down.py  kill.py  port.py
commands/: __init__.py  compose_build.py  compose_config.py  compose_convert.py  compose_down.py  compose_exec.py  compose_images.py  compose_kill.py  compose_logs.py  compose_port.py  compose_ps.py  compose_pull.py  compose_restart.py  compose_run.py  compose_start.py  compose_stop.py  compose_top.py  compose_up.py  compose_version.py
compose_cmds/: __init__.py  build.py  config.py  convert.py  down.py  images.py  logs.py  port.py  ps.py  pull.py  restart.py  start.py  stop.py  top.py  up.py  version.py
docs/: Command-Compatibility.md  Commands.md  Field-Compatibility.md  Hacks.md  Home.md  How-It-Works.md  Installation.md  Limitations.md  Usage.md  Variable-Interpolation.md  _Sidebar.md
hacks/: __init__.py  expand.py  interpolate.py  name_inject.py  normalize.py  strip_extensions.py
models/: compose.py
models/quadlet/: _base.py  build.py  container.py  image.py  network.py  pod.py  volume.py
quadlet_types/: __init__.py  build.py  image.py  network.py  volume.py
scripts/: download_and_build_podlet-compose.sh  generate_binary_using_dockerfile.sh
subcommands/: __init__.py  build.py  config.py  convert.py  down.py  exec.py  images.py  kill.py  logs.py  port.py  ps.py  pull.py  restart.py  run.py  start.py  stop.py  top.py  up.py  version.py
test-compose/: compose.yaml  compose.yml
test-compose/html/: index.html
tests/: conftest.py
tests/integration/: test_config.py  test_parse_error.py  test_up_down.py
tests/integration/fixtures/bind_mounts/: compose.yaml
tests/integration/fixtures/empty_services/: compose.yaml
tests/integration/fixtures/networks/: compose.yaml
tests/integration/fixtures/parse_error/: compose-error.yaml
tests/integration/fixtures/up_down/: compose.yaml
tests/integration/fixtures/volumes/: compose.yaml
tests/unit/: test_cli.py  test_compose.py  test_dotenv.py  test_field_maps.py  test_interpolate.py  test_interpolation.py  test_logs.py  test_mapping.py  test_parse_compose.py  test_progress.py  test_quadlet_models.py  test_up.py
tests/unit/converters/: test_build.py  test_duration.py  test_list_or_dict.py  test_network.py  test_service.py  test_volume.py
utils/: __init__.py  _helpers.py  compose.py  config.py  interpolation.py  mapping.py  progress.py  quadlet.py  utils.py
utils/converters/: __init__.py  _duration.py  _helpers.py  _list_or_dict.py  build.py  network.py  service.py  volume.py
utils/field_maps/: __init__.py  build.py  network.py  service.py  volume.py
