[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadlet-compose"
version = "0.2.1"
description = "A thin wrapper around podlet that acts as a drop-in for docker/podman-compose"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "rich",
    "ruamel.yaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout"]

[project.scripts]
quadlet-compose = "quadlet_compose:main"

[tool.setuptools]
py-modules = ["quadlet_compose"]
packages = ["compose_cmds", "hacks", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that require podman, podlet, and systemd (deselect with '-m \"not integration\"')",
]

[tool.datamodel-codegen]
input = "compose-spec.json"
input-file-type = "jsonschema"
output = "models/compose.py"
output-model-type = "pydantic_v2.BaseModel"
extra-fields = "ignore"
field-constraints = true
snake-case-field = true
target-python-version = "3.10"
use-subclass-enum = true
use-unique-items-as-set = true
use-double-quotes = true
disable-future-imports = true
disable-timestamp = true
naming-strategy = "parent-prefixed"
use-type-alias = true